frontend/src/app/app.component.scss
@use '../styles.scss' as styles;
@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Cascadia+Code:ital,wght@0,200..700;1,200..700&display=swap');

#appComponent {
  display: flex;
  flex: 1 3 auto;
  flex-direction: row;
  background-color: var(--background-color);
  color: var(--primary-color);
  font-family: var(--font-family), serif;
}

.content-wrapper {
  @include styles.animated-background;
  display: flex;
  flex-direction: column;
  flex: 1;
  justify-content: center;
  padding: 1rem 2rem 0 2rem;
  min-height: 100vh;
  position: relative;
  overflow-x: hidden;
}

